--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,7 @@
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-venv/
-env/
-*.venv
-*.env
 .env
-cred.yaml
-logs/
-*.log
-*.out
-*.err
-data/vosk_model/
-data/conversations/
-data/temp/
-speech_models/
-*.wav
-*.mp3
+data/
+src/__pycache__
+src/llm/__pycache__
+src/bot/__pycache__
+src/speech/__pycache__
+data/models
