--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,64 @@ coverage           # Test coverage reports
 
 # Miscellaneous Utilities
 numpy             # Used for speech synthesis
+
+scipy
+deepspeed
+huggingface_hub
+matplotlib
+encodec
+pyttsx3
+cutlet
+umap_learn
+numpy
+g2pkk
+fsspec
+gradio
+packaging
+setuptools
+librosa
+tokenizers
+openai
+gruut_ipa
+num2words
+bnunicodenormalizer
+pysbd
+tqdm
+einops
+onnxruntime
+protobuf
+PyAudio
+pypinyin
+python-dotenv
+SpeechRecognition
+soundfile
+k_diffusion
+anyascii
+torchaudio
+inflect
+Cython
+opencc
+MeCab
+transformers
+hangul_romanize
+spacy
+six
+faster_whisper
+mutagen
+coqpit
+Flask
+clearml
+pandas
+jamo
+PyYAML
+seaborn
+Requests
+torch
+kaggle
+vosk
+absl_py
+bnnumerizer
+jieba
+JPype1
+gruut
+
